fix 480px visibility

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -11,10 +11,10 @@
 @bg-accent: #212121;  //accent color
 
 *{
-    display:  -webkit-flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-     flex-wrap: wrap;
+//    display:  -webkit-flex;
+//    -webkit-flex-wrap: wrap;
+//    -ms-flex-wrap: wrap;
+//     flex-wrap: wrap;
     //todo: handle and check buttons in iPhone with:
     /*
     -webkit-box-flex-grow: 1;
@@ -47,27 +47,26 @@
     flex-direction: row;
     justify-content:space-around;
   }
-
 }
 
 @media screen and (min-width: 480px) {
   #container{
-    width:80%;
-    right:10%;
+    width:60%;
+    right:20%;
   }
 
   #logo{
-    width:80%;
-    right:10%;
+    width:60%;
+    right:20%;
   }
   header{
-    width:80%;
-    right:10%;
+    width:100%;
+    right:20%;
   }
 
   footer{
-    width:80%;
-    right:10%;
+    width:100%;
+    right:20%;
   }
 
 }
@@ -93,8 +92,6 @@
   }
 }
 
-
-
 body{
   font-family: 'Alef', sans-serif;
 
@@ -115,7 +112,6 @@ body{
   height: 30px;
   width: 60px;
   margin: 3px;
-
 }
 
 #loginScreen {
@@ -124,44 +120,28 @@ body{
   left: 0px;
   width: 100%;
   height: 100%;
-
   z-index: 50;
 }
-
-
 #container {
-
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-
   position: absolute;
   top:0px;
-
-
 }
-
 wrapper{
-
   flex: 1;
-
   overflow-y:scroll;
   background-color: #dbdbdb;
   padding-top: 12px;
 }
-
-
-
-
 .titles {
   background-color: #4A148C;
   font-weight: 700;
   color: white;
   text-align: center;
 }
-
 .clickables {
   cursor: pointer;
   user-select: none;
@@ -170,7 +150,6 @@ wrapper{
   -ms-user-select: none;       /* IE/Edge */
   -webkit-touch-callout: none; /* iOS Safari */
 }
-
 .material-ripple > span {
   position: relative;
   display: block;
